--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -19,7 +19,7 @@
   }
 
   .mountains {
-    background-image: url("/mountains.png");
+    background-image: url("/f.png");
     background-size: cover;
     background-position: bottom;
     width: 100%;
